Fix overflow for forms.html

--- a/less/blocks/form.less
+++ b/less/blocks/form.less
@@ -492,27 +492,39 @@
 
     &__input-set:nth-of-type(2) &__item-list {
       display: flex;
-      flex-flow: column wrap;
+      flex-flow: row wrap;
       align-content: flex-start;
-      height: 146px;
-      padding-bottom: 18px;
+      min-height: 146px;
+      padding-bottom: 0;
       padding-left: 38px;
+      max-width: 100%;
     }
 
     &__input-set:nth-of-type(2) &__item {
-        flex-grow: 0;
-        width: 270px;
+      flex: 0 270px;
 
-      &:nth-child(2n + 2) {
-        margin-bottom: 0;
+      &:nth-child(1),
+      &:nth-child(3),
+      &:nth-child(5) {
+        order: -1;
       }
 
-      &:nth-child(1) {
+      &:nth-child(1),
+      &:nth-child(2),
+      &:nth-child(3n+7) {
         margin-right: 45px;
       }
 
-      &:nth-child(3) {
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(3n+8) {
         margin-right: 35px;
+      }
+
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(3n+9) {
+        flex: 1 230px;
       }
     }
 
